# PainterGoogleTestExample

./: CMakeLists.txt  CMakePresets.json  Readme.md
Painter/: CMakeLists.txt
Painter/src/: DrawingItem.h  Painter.cpp  Painter.h  Pen.cpp  Pen.h  main.cpp
Painter/src/include/: DrawingItem.h  Painter.h  Pen.h
Painter/test/: tests.cpp
