cmake_minimum_required(VERSION 3.14)
project(Painter)

# GoogleTest requires at least C++14
set(CMAKE_CXX_STANDARD 14)

include(FetchContent)
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG release-1.12.1
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

add_executable(
  tests
  test/tests.cpp
  src/Painter.cpp
  src/Pen.cpp
)

add_executable(
    painter
    src/main.cpp
    src/Painter.cpp
    src/Pen.cpp
)

target_include_directories(
    painter
    PUBLIC
    src/include/
)

target_include_directories(
    tests
    PUBLIC
    src/include/
)

target_link_libraries(
  tests
  GTest::gtest_main
  GTest::gmock_main
)

include(GoogleTest)
gtest_discover_tests(tests)